--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "redux-cofx",
   "description": "redux middleware; sagas for thunks",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
   "license": "MIT",
@@ -26,7 +26,7 @@
     "tape": "^4.9.1",
     "ts-jest": "^23.0.0",
     "ts-node": "^7.0.0",
-    "typescript": "^2.9.2",
+    "typescript": "^3.1.0-dev.20180831",
     "typings": "^2.1.1"
   },
   "lint-staged": {
