--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-cofx",
-  "description": "redux middleware; sagas for thunks",
+  "description": "redux middleware; sagas as thunks",
   "version": "1.3.0",
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
@@ -18,7 +18,7 @@
     "prettier": "prettier --write *.{js,ts}"
   },
   "dependencies": {
-    "cofx": "^1.3.0"
+    "cofx": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^10.5.2",
@@ -30,7 +30,7 @@
     "tape": "^4.9.1",
     "ts-jest": "^23.0.0",
     "ts-node": "^7.0.0",
-    "typescript": "^3.1.0-dev.20180831",
+    "typescript": "^3.1.4",
     "typings": "^2.1.1"
   },
   "lint-staged": {
